syntax = "proto3";

package go.micro.srv.house;

service House {
	rpc PubHouse(Request) returns (Response) {};
	rpc UploadHouseImg(ImgReq)returns(ImgResp){};
	rpc GetHouseInfo(GetReq)returns(GetResp){};
	rpc GetHouseDetail(DetailReq)returns(DetailResp){};
	rpc GetIndexHouse(IndexReq)returns(GetResp){};
	rpc SearchHouse(SearchReq)returns(GetResp){};
}

message SearchReq{
	string aid = 1;
	string sd = 2;
	string ed = 3;
	string sk = 4;
}

message IndexReq{
}


message DetailReq{
	string houseId = 1;
	string userName = 2;
}

message DetailResp{
	string errno = 1;
	string errmsg = 2;
	DetailData data = 3;
}

message DetailData{
	HouseDetail house = 1;
	int32 user_id = 2;
}

message HouseDetail{
	int32 acreage = 1;
	string address = 2;
	string beds = 3;
	int32 capacity = 4;
	//comment
	repeated CommentData comments = 5;
	int32 deposit=6;
	//展示所有的图片 主图片和副图片
	repeated int32 facilities = 7; //家具id切片
	int32 hid = 8;
	repeated string img_urls = 9;
	int32 max_days = 10;
	int32 min_days = 11;
	int32 price = 12;
	int32 room_count = 13;
	string title = 14;
	string unit = 15;
	string user_avatar = 16;
	int32 user_id = 17;
	string user_name = 18;
}

message CommentData{
	string comment = 1;
	string ctime = 2;
	string user_name = 3;
}


message GetReq{
	string userName = 1;
}

message GetResp{
	string errno = 1;
	string errmsg = 2;
	GetData data = 3;
}

message GetData{
	repeated Houses houses = 1;
}

message Houses {
	string address = 1;
	string area_name = 2;
	string ctime = 3;
	int32 house_id = 4;
	string img_url = 5;
	int32 order_count = 6;
	int32 price = 7;
	int32 room_count = 8;
	string title = 9;
	string user_avatar = 10;
}

message ImgReq{
	string houseId = 1;
	bytes imgData = 2;
	string fileExt = 3;
}

message ImgResp{
	string errno = 1;
	string errmsg = 2;
	ImgData data = 3;
}

message ImgData{
	string url = 1;
}



message Request {
	string acreage = 1;
	string address = 2;
	string area_id = 3;
	string beds = 4;
	string capacity = 5;
	string deposit = 6;
	repeated string facility = 7;
	string max_days = 8;
	string min_days = 9;
	string price = 10;
	string room_count = 11;
	string title = 12;
	string unit = 13;
	string userName = 14;
}

message Response {
	string errno = 1;
	string errmsg = 2;
	HouseData data = 3;
}

message HouseData{
	string house_id = 1;
}