syntax = "proto3";

package go.micro.srv.userOrder;

service UserOrder {
	rpc CreateOrder(Request) returns (Response) {};
	rpc GetOrderInfo(GetReq)returns(GetResp){};
	rpc UpdateStatus(UpdateReq)returns(UpdateResp){};
}

message UpdateReq{
	string action = 1;
	string reason = 2;
	string id = 3;
}

message UpdateResp{
	string errno = 1;
	string errmsg = 2;
}


message GetReq{
	string role = 1;
	string userName = 2;
}

message GetResp{
	string errno = 1;
	string errmsg = 2;
	GetData data = 3;
}


message GetData{
	repeated OrdersData orders = 1;
}

message OrdersData{
	int32 amount = 1;
	string comment = 2;
	string ctime = 3;
	int32 days = 4;
	string end_date = 5;
	string img_url = 6;
	int32 order_id = 7;
	string start_date = 8;
	string status = 9;
	string title = 10;
}



message Request {
	string house_id = 1;
	string start_date = 2;
	string end_date = 3;
	string userName = 4;
}

message Response {
	string errno = 1;
	string errmsg = 2;
	OrderData data = 3;
}

message OrderData{
	string order_id = 1;
}